--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -41,7 +41,7 @@
 .login{
     grid-column: 3;
     display: flex;
-    justify-content: flex-end; 
+    justify-content: right; 
     align-items: center;
     justify-content:right;
 }
