changes made according to the review

--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -26,9 +26,8 @@
     font-size: 18px;
     color: beige;
 }
-.nav-items li a{
+.nav-items a{
     text-decoration: none;
-    list-style: none;
     color: beige;
 }
 
