--- a/client/src/Pages/Signup.css
+++ b/client/src/Pages/Signup.css
@@ -25,7 +25,7 @@
     text-align: center;
     padding: 0px 20px;
 }
-.gender
+.gender-select
 {
         width: 97%;
         padding:15px;
@@ -45,4 +45,7 @@
 .register{
     color: #713A11;
     margin-bottom: 0%;
+}
+.loginbtn{
+    color: black;
 }
