--- a/client/src/Pages/Profile.css
+++ b/client/src/Pages/Profile.css
@@ -110,17 +110,22 @@ hr{
 }
 
 .upload-profile-pic{
-  position: absolute;
-  top: 120px;
-  left: 20px;
+width: 100%;
+height: 100%;
 }
 .upload-profile-pic input[type="file"] {
+  background-color: transparent;
+  /* display: none; */
   border: none;
-}
-.upload-profile-pic input[type="submit"] {
-  width: 100px;
+  width: 100%;
+height: 100%;
+margin-right: 100px;
+margin-left: -43px;
+    margin-top: -16px;
 }
 .profile-picture{
   background-size: cover;
   background-position: center;
+  overflow:hidden;
 }
+
