changes made according to review

--- a/client/src/Pages/ColorsPage.css
+++ b/client/src/Pages/ColorsPage.css
@@ -1,6 +1,6 @@
 .color-card-container{
     padding: 20px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
