--- a/client/src/Components/ColorCard.css
+++ b/client/src/Components/ColorCard.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 .color-container {
-    height: 250px;
+    height: 280px;
     width: 350px;
     border-radius: 1em;
     overflow: hidden;
@@ -16,8 +16,9 @@
   }
   .palette {
     display: flex;
-    height: 80%;
+    height: 70%;
     width: 100%;
+
   }
   
   .color-container .color {
@@ -57,12 +58,14 @@
   
   .color-name-container{
     padding: 0px 15px  ;
-    height: 20%;
+    height: 29%;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
+  .color-name-container h2{
+    margin: 10px;
+  }
   .heart-container {
     --heart-color: rgb(255, 0, 0);
     position: relative;
