--- a/client/src/Pages/Contact.css
+++ b/client/src/Pages/Contact.css
@@ -40,7 +40,9 @@
 .form textarea{
     padding: 15px;
     width: 85%;
+    max-width: 340px;
     height: 100px;
+    max-height: 100px;
     margin: 10px;
     border-radius: 5px;
 }
