--- a/client/src/Components/UpdateProfile.css
+++ b/client/src/Components/UpdateProfile.css
@@ -37,12 +37,13 @@
 
 .update-profile-form button[type="submit"] {
   width: 40%;
-  border-radius: 20px;
+  border-radius: 5px;
   padding: 10px;
   background-color: #007bff;
   color: #fff;
   border: none;
   cursor: pointer;
+  margin: 0px 10px;
 }
 
 .update-profile-form button[type="submit"]:hover {
