--- a/client/src/Pages/Profile.css
+++ b/client/src/Pages/Profile.css
@@ -35,7 +35,6 @@
   background-color: white;
 }
 .card-header {
-  /* styles for the card header */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,8 +65,8 @@ hr{
 .details{
   /* box-shadow: 0 0 10px 0 gray; */
   border-right: 1px solid black;
-  min-width: 350px;
   width: fit-content;
+  min-width: 350px;
   padding: 15px 20px;
   /* border-radius: 10px; */
 
@@ -81,7 +80,7 @@ hr{
 
 .user-favourites{
   border-left: 1px solid black;
-  width: 300px;
+  width: 350px;
 }
 .favourite-colors{
   /* border: 2px solid black; */
@@ -115,13 +114,14 @@ height: 100%;
 }
 .upload-profile-pic input[type="file"] {
   background-color: transparent;
-  /* display: none; */
   border: none;
   width: 100%;
 height: 100%;
 margin-right: 100px;
 margin-left: -43px;
     margin-top: -16px;
+    font-size: 1px;
+    cursor: pointer;
 }
 .profile-picture{
   background-size: cover;
