--- a/client/src/Pages/Signup.css
+++ b/client/src/Pages/Signup.css
@@ -9,7 +9,7 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 .signup_image {
     background-image: url(../assets/register.png);
@@ -22,6 +22,7 @@
 .signup_form{
     width: 35vw;
     /* border: 2px solid red; */
+    height: 80vh;
     text-align: center;
     padding: 0px 20px;
 }
