--- a/client/src/Components/Footer.css
+++ b/client/src/Components/Footer.css
@@ -1,7 +1,7 @@
 
 /* footer */
 footer{
-    margin-top: 50px;
+    /* margin-top: 50px; */
     background-color: #414642;
     height: 350px;
     padding: 80px 200px;
